--- a/exercises/week2/responsive-boxes/styles.css
+++ b/exercises/week2/responsive-boxes/styles.css
@@ -67,7 +67,7 @@ body{
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 375px) {
   .box1{
     width: 100%;
     height: 15vh;
@@ -90,6 +90,34 @@ body{
   }
   .box5{
     width: 100%;
+    height: 15vh;
+    border-width: 5px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .box1{
+    width: 50%;
+    height: 15vh;
+    border-width: 5px;
+  }
+  .box2{
+    width: 50%;
+    height: 15vh;
+    border-width: 5px;
+  }
+  .box3{
+    width: 50%;
+    height: 15vh;
+    border-width: 5px;
+  }
+  .box4{
+    width: 50%;
+    height: 15vh;
+    border-width: 5px;
+  }
+  .box5{
+    width: 50%;
     height: 15vh;
     border-width: 5px;
   }
