--- a/projects/mario-pest-control/styles.css
+++ b/projects/mario-pest-control/styles.css
@@ -201,6 +201,31 @@ display: inline;
   color:white;
 }
 
+.super-button{
+  width: 30px;
+ height: 30px;
+ text-align: center;
+ padding: 6px 0;
+ font-size: 12px;
+ margin-top: 20px;
+ line-height: 1.428571429;
+ border-radius: 15px;
+  transform: rotate(270deg);
+  background-color: orange;
+}
+
+.bar{
+  background-color: rgb(121, 117, 117);
+  width: 30px;
+  padding-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 15px;
+  padding-top: 5px;
+
+ transform: rotate(45deg);
+ border-radius: 45px;
+}
+
 .smart-image{
   background-size: cover;background-position: center;background-repeat: none;
 }
