--- a/projects/mario-pest-control/styles.css
+++ b/projects/mario-pest-control/styles.css
@@ -1,34 +1,34 @@
 @font-face {
-    font-family: mario;
-    src: url(Super-Mario-Bros.ttf.woff);
+  font-family: mario;
+  src: url(Super-Mario-Bros.ttf.woff);
 }
-
 
 body {
   background-image: url("background.jpg");
-  -webkit-background-size: cover;
+  /*-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-
+  background-size: cover;*/
 }
 
-
-.mario{
-font-family: mario, sans-serif !important;
-color:yellow !important;
-text-transform: uppercase;
+.mario {
+  font-family: mario, sans-serif !important;
+  color: yellow !important;
+  text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.background{
+
+.total-box {}
+
+.background {
   width: 100%;
-  vertical-align:bottom;
-  position:relative;
-  z-index:-1;
+  vertical-align: bottom;
+  position: relative;
+  z-index: -1;
 }
 
-
-
-.pests{
+.pests {
   background-color: #3bbf1a;
   height: 400px;
   border-radius: 30px;
@@ -36,78 +36,75 @@ text-transform: uppercase;
   width: 80%;
   margin: 1px;
   display: inline-block;
-  -webkit-box-shadow: 25px 17px 58px 2px rgba(156,158,155,.5);
--moz-box-shadow: 25px 17px 58px 2px rgba(94, 94, 94, .5);
-box-shadow: 25px 17px 58px 2px rgba(94, 94, 94, .5);
+  -webkit-box-shadow: 25px 17px 58px 2px rgba(156, 158, 155, .5);
+  -moz-box-shadow: 25px 17px 58px 2px rgba(94, 94, 94, .5);
+  box-shadow: 25px 17px 58px 2px rgba(94, 94, 94, .5);
 }
 
-.sub-heads{
+.sub-heads {
   font-family: 'Roboto', sans-serif !important;
   font-weight: bolder;
   text-transform: uppercase;
 }
-.pest-pad{
+
+.pest-pad {
   padding-top: 8.295px;
   padding-bottom: 8.295px;
 }
-.pest-img{
-  width:100px;
+
+.pest-img {
+  width: 100px;
 }
 
 .total {
   /*height:100px;*/
-  width:80%;
+  width: 80%;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: black;
   color: yellow;
-
-
 }
 
-.total p{
+.total p {
   font-size: 40px !important;
   vertical-align: middle !important;
-  top:30px;
-
+  top: 30px;
 }
 
-.lil{
-margin-top: 26.59px !important;
-}
+
+/*.lil{
+  margin-top: 26.59px !important;
+  }*/
 
 .grand-total {
-  height:100px;
-  width:20%;
+  height: 100px;
+  width: 20%;
   vertical-align: middle !important;
   /*background-color: black;*/
   color: yellow;
-
-
 }
 
-.grand-total p{
+.grand-total p {
   font-size: 40px !important;
 }
 
-.vbottom{
+
+/*.vbottom{
   position:relative;
   top: 20px;
 
-}
+  }*/
 
-.vbottom2{
-  position:relative;
+.vbottom2 {
+  position: relative;
   top: 36.59px;
-
 }
 
+.controller {
+  width: 100%;
+}
 
-
-
-
-.left-bk{
-
+.left-bk {
   width: 200px;
   height: 200px;
   -webkit-border-radius: 200px;
@@ -118,47 +115,42 @@ margin-top: 26.59px !important;
   z-index: 2;
   position: relative;
 }
+
 .left-circle {
   width: 130px;
   height: 130px;
   -webkit-border-radius: 130px;
   -moz-border-radius: 130px;
   border-radius: 130px;
-  border-color:white;
-  border-style:solid;
+  border-color: white;
+  border-style: solid;
   border-width: .3em;
   /*display: inline-block;*/
   z-index: 4;
-  top:4vh;
+  top: 4vh;
   left: 30px;
-
   position: relative;
 }
 
-.fa{
-display: inline;
+.fa {
+  display: inline;
   z-index: 5;
-  top:4vh;
-  left: 30px;
-
+  top: 4vh;
   position: relative;
 }
-.right-circle{
-  width: 130px;
-  height: 130px;
-  -webkit-border-radius: 130px;
-  -moz-border-radius: 130px;
-  border-radius: 130px;
-  border-color:white;
-  border-style:solid;
-  border-width: .3em;
-  /*display: inline-block;*/
+
+.right-circle {
+  width: 150px;
+  height: 150px;
+  -webkit-border-radius: 150px;
+  -moz-border-radius: 150px;
+  border-radius: 150px;
+  background-color: rgb(121, 117, 117);
+  display: inline-block;
   z-index: 4;
-  top:4vh;
-  left: 30px;
-
+  top: 3.5vh;
+  left: 5px;
   position: relative;
-
 }
 
 .right-bk {
@@ -168,21 +160,16 @@ display: inline;
   -moz-border-radius: 200px;
   border-radius: 200px;
   background: rgb(222, 222, 222);
-
   display: inline-block;
+  top: -20px;
   z-index: 2;
   position: relative;
 }
-
-
-
-
 
 .center-bk {
   width: 240px;
   height: 170px;
   background: rgb(222, 222, 222);
-
   display: inline-block;
   vertical-align: top;
   z-index: -1;
@@ -190,42 +177,107 @@ display: inline;
   position: relative;
 }
 
-.footer{
+.blue {
+  background-color: blue !important;
+  width: 25px;
+  height: 25px;
+  /*text-align: center;*/
+  /*padding-top: 6px;*/
+  display: inline-block;
+  margin-left: 30px;
+  /*margin-top: 10px;*/
+  border-radius: 15px;
+  color: white;
+}
+
+.red {
+  background-color: red !important;
+  width: 25px;
+  height: 25px;
+  /*text-align: center;*/
+  /*padding-top: 6px;*/
+  display: inline-block;
+  margin-left: 30px;
+  /*margin-top: 10px;*/
+  border-radius: 15px;
+  color: white;
+}
+
+.yellow {
+  background-color: yellow !important;
+  width: 25px;
+  height: 25px;
+  /*text-align: center;*/
+  /*padding-top: 6px;*/
+  display: inline-block;
+  /*margin-top: 10px;*/
+  border-radius: 15px;
+  color: black;
+}
+
+.green {
+  background-color: green !important;
+  width: 25px;
+  height: 25px;
+  /*text-align: center;*/
+  /*padding-top: 6px;*/
+  display: inline-block;
+  /*margin-top: 10px;*/
+  border-radius: 15px;
+  color: white;
+}
+
+.bar {
+  background-color: rgb(222, 222, 222);
+  text-align: center;
+  width: 100px;
+  /*padding-bottom: 2px;*/
+  /*height: 25px;*/
+  /*padding-left: 4px;
+    padding-right:4px;*/
+  /*padding-top: 2px;*/
+  display: block;
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  border-radius: 45px;
   position: relative;
-  top: 100%;
-  transform: translateY(-100%);
-  top:100%;
+  top: 6vh;
+  left: 10px;
+}
+
+.bottom-bar {
+  background-color: rgb(222, 222, 222);
+  text-align: center;
+  width: 100px;
+  /*padding-bottom: 2px;*/
+  /*height: 25px;*/
+  /*padding-left: 4px;
+    padding-right:4px;*/
+  /*padding-top: 2px;*/
+  display: block;
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  border-radius: 45px;
+  position: relative;
+  left: 40px;
+  top: 6vh;
+}
+
+.footer {
+margin-top: 30px;
   width: 100%;
-  height:60px;
+  padding-top: 40px;
+  padding-bottom:40px;
   background-color: black;
-  color:white;
+  color: white;
 }
 
-.super-button{
-  width: 30px;
- height: 30px;
- text-align: center;
- padding: 6px 0;
- font-size: 12px;
- margin-top: 20px;
- line-height: 1.428571429;
- border-radius: 15px;
-  transform: rotate(270deg);
-  background-color: orange;
+.footer p {
+
+font-family: sans-serif;
+text-transform: uppercase;
 }
 
-.bar{
-  background-color: rgb(121, 117, 117);
-  width: 30px;
-  padding-bottom: 20px;
-  padding-left: 5px;
-  padding-right: 15px;
-  padding-top: 5px;
-
- transform: rotate(45deg);
- border-radius: 45px;
-}
-
-.smart-image{
-  background-size: cover;background-position: center;background-repeat: none;
-}
+.red:hover, .red:active, .red:visited, .btn-primary:focus {}
