--- a/projects/mario-pest-control/styles.css
+++ b/projects/mario-pest-control/styles.css
@@ -264,7 +264,20 @@ body {
   left: 40px;
   top: 6vh;
 }
+.red:focus {
+  outline: none;
+}
+.yellow:focus {
+  outline: none;
+}
 
+.green:focus {
+  outline: none;
+}
+
+.blue:focus {
+  outline: none;
+}
 .footer {
 margin-top: 30px;
   width: 100%;
@@ -276,7 +289,7 @@ margin-top: 30px;
 
 .footer p {
 
-font-family: sans-serif;
+  font-family: 'Roboto', sans-serif !important;
 text-transform: uppercase;
 }
 
