--- a/exercises/week4/hit-list/styles.css
+++ b/exercises/week4/hit-list/styles.css
@@ -1,4 +1,6 @@
-
+*{
+box-sizing: border-box;
+}
 .bk{
   background-color: black;
 }
@@ -14,6 +16,7 @@
 .hit-img{
 background-size: cover;
 background-position: center;
+
 }
 
 .name{
@@ -22,12 +25,31 @@ background-position: center;
   width: 100%;
   background-color:rgba(184, 97, 88, 0.73);
   text-align:center;
-  font-family: sans-serif;
+  font-family: monospace;
+  font-size: 3em;
   text-transform: uppercase;
 }
 
 
 .don{
   max-width: 100px;
-  float:right;
+  float:left;
+  padding: 8px;
+}
+
+
+.navbar{
+  background-color: rgba(184, 97, 88, 0.73) !important;
+  margin: 0px !important;
+  border-color: rgba(184, 97, 88, 0.73) !important;
+  font-family: monospace;
+
+  text-transform: uppercase;
+
+}
+
+.navbar-brand{
+  font-size: 3em !important;
+  margi-top:30%;
+
 }
