progress on the practice react

--- a/exercises/week5/react-simple/src/index.css
+++ b/exercises/week5/react-simple/src/index.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');
 
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
@@ -8,14 +11,28 @@ body {
 }
 
 .navbar{
-  color: black;
-  background-color: (255, 255, 255, 0.55);
+  color: white;
+  background-color: transparent;
+  margin-bottom: 0px !important;
+  border-radius: 0px;
+  border:transparent;
+  padding: 15px;
+}
+
+.holder{
+  /*display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  height:400px;*/
+  text-align: center;
 }
 
 .navbar li{
   text-transform: uppercase;
   padding-left: 30px;
   font-weight: 800;
+
 }
 
 h3 {
@@ -30,26 +47,28 @@ h3 {
 header{
   background-image: url("./img/home.jpg");
   background-position: center;
-  height: 600px;
+  padding-top: 200px;
+  padding-bottom:200px;
+  /*height: 500px;*/
   text-align: center;
+  width: 100%;
   color:white;
   font-family: 'Open Sans', sans-serif;
-  z-index: -1;
-  
-
-
+  margin-top: -100px;
 }
 
 header h1{
-  font-weight: 700 !important;
-  font-size: 8em;
-  letter-spacing: -6px;
+  font-weight: 800 !important;
+  font-size: 6em;
+  margin-top: 0px;
+  /*letter-spacing: -4px;*/
 
 }
 
 header h2{
 
-  font-size: 2em;
+  font-size: 1.75em;
+  font-weight: 300;
 }
 
 #white-line{
@@ -61,4 +80,106 @@ header h2{
 
 .awesome{
   text-align: center;
+  padding: 80px;
+
 }
+
+
+
+.blog-title{
+  font-weight: 800 !important;
+  font-size: 2.75em;
+  padding-bottom: .1em;
+  font-family: 'Open Sans', sans-serif;
+
+
+}
+
+a{
+  color:black !important;
+}
+a:link{
+  text-decoration: none!important;
+}
+a :hover{
+  color:rgb(50, 139, 163);
+  text-decoration: none !important;
+}
+
+h2 :hover{
+  text-decoration: none !important;
+}
+
+
+.sub-title{
+  font-size: 1.8em;
+  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: -.3px;
+
+}
+
+.blog-date{
+  font-family: serif;
+  font-style: italic;
+  font-size: 20px;
+
+
+
+}
+
+#para{
+  margin-top: 5em;
+}
+
+hr{
+  margin-bottom: 2.5em;
+  margin-top: 2.5em;
+}
+
+.old-posts{
+  font-size: 1em;
+  font-weight: 800;
+  font-family: 'Open Sans', sans-serif;
+  padding:10px;
+  border: .5px;
+  border-style: solid;
+  border-color:rgb(207, 207, 207);
+  text-align: center;
+  width: 170px;
+  float: right;
+  text-transform: uppercase;
+  background-color: white;
+
+}
+
+
+
+.arrow{
+  margin-left: .8em;
+}
+.copyright{
+  font-family: serif;
+
+
+  color:rgb(191, 188, 188);
+}
+.copyright-symbol{
+  padding: 10px;
+
+}
+
+.social-tag{
+  font-size:30px;
+  padding-left: 35px;
+  padding-right: 35px;
+}
+
+.white :hover{
+  color:white !important;
+
+}
+
+/*.fontsA{
+  padding: 20px;
+}*/
