--- a/exercises/week6/forms-intro/src/index.css
+++ b/exercises/week6/forms-intro/src/index.css
@@ -2,10 +2,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: papayawhip;
+  font-family: 'Raleway', sans-serif;
+  color:rgb(68.7%, 61.7%, 49.6%);}
+
+ul li{
+  list-style: none !important;
 }
 
-.wrapper{
-  margin: auto;
-  width:100%;
-  height:100vh;
+
+.help{
+ margin: 0 auto; 
+ width: 900px; 
 }
