--- a/exercises/week6/todo-list/src/index.css
+++ b/exercises/week6/todo-list/src/index.css
@@ -18,7 +18,14 @@ h1{
 
 .list{
   width: 100%;
-  height:50vh;
-  background-color: white;
+  min-height:50vh;
+  background-color: rgba(255,255,255,.95);
+  -webkit-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
   
+}
+
+ul{
+  list-style: none;
 }
