--- a/exercises/week9/stitch-o-nary/src/index.css
+++ b/exercises/week9/stitch-o-nary/src/index.css
@@ -2,4 +2,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: rgb(75.3%, 75.3%, 75.3%);
 }
+
+h2{
+  font-family: 'Lobster', cursive;
+
+  
+
+}
+h1{
+  font-family: 'Lobster', cursive;
+
+}
+
+h4{
+ 
+font-family: 'Droid Sans', sans-serif;
+}
+
+/*.space-it{
+  padding-top:100px;
+}*/
