--- a/exercises/week9/stitch-o-nary/src/index.css
+++ b/exercises/week9/stitch-o-nary/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  color: rgb(75.3%, 75.3%, 75.3%);
+ 
 }
 
 h2{
@@ -13,14 +13,30 @@ h2{
 }
 h1{
   font-family: 'Lobster', cursive;
+  
 
 }
 
 h4{
  
 font-family: 'Droid Sans', sans-serif;
+ color: #DFDFE3;
 }
 
-/*.space-it{
-  padding-top:100px;
-}*/
+.pattern{
+  width:100%;
+  height:30vh;
+  color: white;
+  background-color: #88B04B;
+     padding:20px;
+    margin:0 auto;
+  
+   
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.25);
+-moz-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.25);
+box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.25);
+}
+
+/*mustard color : #DAB965*/
